Update "getLinkMultimap(java.lang.String,java.lang.Iterable)" method in "org.springframework.context.support.JapanDictGui" class